# rag_challenge2_weaction

./: .env.example  .gitignore  README.md  main.py  payload.json  pyproject.toml  rag_logs.txt  rag_logs2.txt  requirements.txt
config/: prompts.yaml  settings.yaml
docker/: Dockerfile  docker-compose.yml
docker/qdrant_storage/: raft_state.json
docker/qdrant_storage/collections/rag/0/: newest_clocks.json  replica_state.json
docker/qdrant_storage/collections/rag/0/segments/3dd6589b-f6c4-4ecd-b577-6b2cff79ecec/: mutable_id_tracker.mappings
docker/qdrant_storage/collections/rag/0/segments/43b99429-e3be-406a-9d92-695faa79fc30/: mutable_id_tracker.mappings
docker/qdrant_storage/collections/rag/0/segments/4c01f7b8-732a-4622-b27a-ab5cfcb0b030/: mutable_id_tracker.mappings
docker/qdrant_storage/collections/rag/0/segments/6f071103-adb5-46f7-a292-b4705ff84f22/: mutable_id_tracker.mappings
docker/qdrant_storage/collections/rag/0/segments/df05eb94-545d-41ec-85d6-a4016ae581f5/: mutable_id_tracker.mappings  mutable_id_tracker.versions
eval/: completed_dataset.json  dataset.json
scripts/: evaluate.py  ingest.py
src/: main.py
src/api/routes/: health.py  ingest.py  query.py
src/api/schemas/: models.py
src/core/: config.py  langfuse.py  logger.py
src/evaluation/: ragas_evaluator.py
src/generation/: llm_client.py  response_builder.py
src/ingestion/: document_loader.py  embedder.py  indexer.py  splitter.py
src/retrieval/: query_processor.py  retriever.py
(+2 files in other folders)
